# cmap-agent-api

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml
docs/: source_points_example.csv  swagger_colocalize_payload.json
scripts/: ab_backend.py  ab_neighbor_expansion.py  ab_refbank_chunksize.py  build_eval_queries.py  deploy_ecs.sh  diagnose_pdf_extraction.py  diagnose_retrieval.py  diagnose_sentence_rerank.py  eval_catalog_search.py  eval_retrieval.py  eval_text_match.py  push_ecr.sh  release.sh  retrieval_eval_queries.json  test_bare_query.py  test_combined_modality_hint.py  test_gate_dedup_integration.py  test_modality_intent.py  test_pdf_number_fix.py  test_qdrant_filter_helpers.py  test_qdrant_regression.py  test_sql_validator.py  test_upsert_retry.py  test_variable_availability_gate.py  validate_qdrant_cloud.py  verify_eval_targets.py
scripts/catalog_eval/: queries.json
scripts/eval_prompts/: answers.json  answers2.json  answers_hand.json  answers_manual.json  prompts_eval.json  prompts_eval2.json  prompts_eval_hand.json  prompts_eval_manual.json
sql/: add_agent_state.sql  agent_schema.sql  drop_agent_catalog_tables.sql
src/cmap_agent/: utils.py
src/cmap_agent/agent/: context.py  intent.py  prompts.py  runner.py  state.py
src/cmap_agent/cli/: main.py
src/cmap_agent/config/: settings.py
src/cmap_agent/llm/: anthropic_client.py  base.py  openai_client.py  types.py
src/cmap_agent/rag/: chroma_kb.py  embedder.py  format.py  qdrant_kb.py  retrieval.py  types.py
src/cmap_agent/server/: app.py  auth.py  models.py  rate_limit.py  thread_title.py
src/cmap_agent/storage/: sqlserver.py  vectorstore_base.py  (+1 more)
(+18 files in other folders)
