[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "cmap-agent"
version = "0.2.52"
description = "Agentic interface for Simons CMAP (tool-calling + pycmap + custom plotting)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Simons CMAP", email = "support@simonscmap.org" }
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "pyodbc>=5.0",
    "pandas>=2.1,<3.0",
    "pyarrow>=15,<21",
    "matplotlib>=3.8",
    "httpx>=0.27",
    "boto3>=1.34",
    "openai>=1.40.0",
    "anthropic>=0.35.0",
    "chromadb>=0.5.5",
    "langgraph>=0.2.0",
    "cartopy>=0.22",
    "pyproj>=3.6",
    "ipython>=8.0",
    "pycmap>=0.2.19,<0.3.0"
]

[project.optional-dependencies]
server = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-multipart>=0.0.9",
]
openai = ["openai>=1.40.0"]
anthropic = ["anthropic>=0.35.0"]
retrieval = ["chromadb>=0.5.0"]
geo = [
  # Recommend installing via conda-forge for reliability (GDAL/PROJ/CARTOPY stack).
  "cartopy>=0.22; platform_system!='Windows'",
  "pyproj>=3.6",
]

[project.scripts]
cmap-agent = "cmap_agent.cli.main:main"
cmap-agent-sync = "cmap_agent.sync.catalog_sync:main"

cmap-agent-sync-catalog = "cmap_agent.sync.metadata_sync:main"
cmap-agent-sync-kb = "cmap_agent.sync.kb_sync:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cmap_agent"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "LICENSE", "sql", "env"]
